--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -11,6 +11,13 @@
   font-family: "Roboto Mono";
 }
 
+.back {
+    background-image: url("https://i.postimg.cc/pLtTbt3c/note-thanun-g-Qekwa7-JK0k-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
 *::-webkit-scrollbar {
     display: none;
 }
@@ -32,12 +39,137 @@
 }
 
 .social-icon {
-    width: 30px;
+    width: 20px;
     margin: 10px;
+    margin-top: 30px;
+}
+
+.footer {
+    border: 2px black solid;
 }
 
 .top-container {
-    background-color: lightblue;
-    padding: 10px;
+    background-color: lightseagreen;
+    padding: 5px;
+}
+
+.profilepic {
+    width: 15rem;
+    border-radius: 50%;
+    margin: 20px;
+    margin-bottom: 10rem;
+}
+
+.col {
+    background-color: lightskyblue;
+}
+
+.bottom-container {
+    background-color: lightseagreen;
+}
+
+h6 {
+    font-size: 10px;
+}
+
+.heading {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+.intro {
+    font-size: 20px;
+    display: grid;
+    box-sizing: content-box;
+    place-items: center;
+    margin-bottom: 100px;
+}
+
+.home-body {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
+}
+
+@media only screen and (max-width: 425px){
+	.home-body {
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    
+    .profilepic {
+        width: 15rem;
+        border-radius: 50%;
+        margin-top: 10px;
+    }
+
+    .pic {
+        margin-bottom: 0px;
+    }
+
+    .back {
+        background-image: url("https://i.postimg.cc/WzG87TPQ/note-thanun-g-Qekwa7-JK0k-unsplash.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+
+    .intro {
+        margin-top: -100px
+    }
+
+    .join {
+        margin-top: -50px;
+    }
+
+    .footer {
+        margin-top: -80px
+    }
+
+}
+
+.title {
+    font-size: 20px;
+}
+
+.title {
+    color: black;
+    width: 8rem;
+    animation: typing 2s steps(10), effect .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+}
+@keyframes effect {
+    50% {
+        border-color: transparent;
+    }
+}
+
+.join { 
+    font-size: 15px;
+    color: lightseagreen;
+    width: 150px;
+    height: 40px;
+    background: whitesmoke;
+    box-shadow: 10px 10px rgba(0,0,0,0.2);
+    border-radius: 30px;
+}
+
+.join:focus {
+    box-shadow: 0px 0px 0px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
