--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -186,7 +186,7 @@ h6 {
     flex-direction: column;
     margin: auto;
     margin-top: 80px;
-    width: 20rem;
+    width: 18rem;
     margin-bottom: 70px;
 }
 
@@ -226,6 +226,12 @@ h6 {
     text-shadow: lightseagreen; 
   }
 
+  .headering {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+  }
+
   .body-card {
     margin: 50px;
     display: flex;
@@ -235,9 +241,26 @@ h6 {
   }
 
   .card {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 
-  .card-img-top {
-    height: 18rem;
+  .quoters {
+    height: 3rem;
+    box-shadow: 0 0 0 0 #000000;
+	transform: scale(1.15);
+	animation: pulse 2s infinite;
   }
+
+  @keyframes pulse {
+	0% {
+		transform: scale(0.9);
+	}
+
+	70% {
+		transform: scale(1.15);
+	}
+
+	100% {
+		transform: scale(0.9);
+	}
+}
