--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -464,3 +464,13 @@ p {
   width: 40px;
   height: 40px;
 }
+
+input:required:invalid:focus {
+  border-color: #ff0000;
+  background-color: #ab27273b;
+}
+
+textarea:required:invalid:focus {
+  border-color: #ff0000;
+  background-color: #ab27273b;
+}
