--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -478,3 +478,18 @@ textarea:required:invalid:focus {
   background-color: rgb(0, 213, 255) !important;
   color: rgb(31, 30, 30) !important;
 }
+
+.my-cv {
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px lightseagreen;
+  background-color: lightblue;
+  outline: 1px solid;
+  outline-color: lightseagreen;
+  transition: 500ms;
+}
+
+.my-cv:hover {
+  background-color: rgb(0, 213, 255) !important;
+  color: rgb(31, 30, 30) !important;
+}
