--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -493,3 +493,25 @@ textarea:required:invalid:focus {
   background-color: rgb(0, 213, 255) !important;
   color: rgb(31, 30, 30) !important;
 }
+
+.about-paragraph {
+  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.p1 {
+  font-size: 30px;
+}
+
+.p2 {
+  font-size: 20px;
+}
+
+.p3 {
+  font-size: 10px
+}
+
+.aboutpage {
+  margin-top: 20px;
+}
