--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -18,6 +18,10 @@
   background-size: 100% 100%;
 }
 
+nav a.router-link-exact-active {
+  color: rgb(255, 255, 255)!important;
+}
+
 *::-webkit-scrollbar {
   display: none;
 }
@@ -514,4 +518,11 @@ textarea:required:invalid:focus {
 
 .aboutpage {
   margin-top: 20px;
+}
+
+.nav-link:hover {
+  background-color: black !important;
+  color: lightseagreen !important;
+  border-radius: 20px;
+  transition: 500ms;
 }
