--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -406,6 +406,22 @@ p {
 .code-icon {
   width: 60px;
   margin-top: 20px;
+  transform: scale(1.15);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+0% {
+  transform: scale(0.9);
+}
+
+70% {
+  transform: scale(1.15);
+}
+
+100% {
+  transform: scale(0.9);
+}
 }
 
 .section-5 {
