--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -515,9 +515,10 @@ textarea:required:invalid:focus {
 }
 
 .about-paragraph {
-  padding: 50px;
   margin-top: 50px;
   margin-bottom: 50px;
+  padding: 20px;
+
 }
 
 .p1 {
@@ -529,11 +530,19 @@ textarea:required:invalid:focus {
 }
 
 .p3 {
-  font-size: 10px
+  font-size: 10px;
+  padding: 10px;
+  margin-bottom: 30px;
 }
 
 .aboutpage {
   margin-top: 20px;
+}
+
+@media only screen and (width < 425px) {
+  .p1 {
+    font-size: 20px;
+  }
 }
 
 .nav-link:hover {
