--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -543,6 +543,9 @@ textarea:required:invalid:focus {
   .p1 {
     font-size: 20px;
   }
+  .title-4 {
+    margin-top: 300px;
+  }
 }
 
 .nav-link:hover {
