--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -208,6 +208,7 @@ h6 {
   border: 2px lightseagreen solid;
   text-align: left;
   box-shadow: 10px 10px 2px rgba(0, 0, 0, 0.2);
+  transition: 500ms;
 }
 
 .btn:focus {
@@ -216,15 +217,15 @@ h6 {
 
 .btn {
   box-shadow: 0px 0px 20px lightseagreen;
-  outline: 1px solid;
+  outline: 2px solid;
   outline-color: lightseagreen;
-  transition: 1500ms;
+  transition: 500ms;
 }
 
 .btn:hover {
   box-shadow: 0px 0px 20px lightseagreen, 0 0 20px lightblue;
   outline-color: lightskyblue;
-  outline-offset: 15px;
+  outline-offset: 10px;
   text-shadow: lightseagreen;
 }
 
@@ -475,6 +476,7 @@ p {
   outline-color: lightskyblue;
   outline-offset: 15px;
   text-shadow: lightseagreen;
+  transition: 1000ms;
 }
 
 @media only screen and (width < 425px) {
@@ -501,6 +503,7 @@ textarea:required:invalid:focus {
 .dropdown-item:hover {
   background-color: rgb(0, 213, 255) !important;
   color: rgb(31, 30, 30) !important;
+  transition: 500ms;
 }
 
 .my-cv {
@@ -558,9 +561,13 @@ textarea:required:invalid:focus {
   }
 }
 
+.nav-link {
+  transition: 500ms !important;
+}
+
 .nav-link:hover {
   background-color: black !important;
   color: lightseagreen !important;
   border-radius: 20px;
-  transition: 500ms;
+  transition: 1000ms;
 }
