--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,7 +12,7 @@
 }
 
 #app {
-  background-image: url("https://i.postimg.cc/pLtTbt3c/note-thanun-g-Qekwa7-JK0k-unsplash.jpg");
+  background-image: url("../assets/Images/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -119,7 +119,7 @@ h6 {
   }
 
   #app {
-    background-image: url("https://i.postimg.cc/WzG87TPQ/note-thanun-g-Qekwa7-JK0k-unsplash.jpg");
+    background-image: url("../assets/Images/bgresize.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
